[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Meter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SmallMeter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/textures/dark/31_.png" type="Texture" id=5]
[ext_resource path="res://Resources/res/play_icon.png" type="Texture" id=6]
[ext_resource path="res://Resources/res/pause_icon.png" type="Texture" id=7]
[ext_resource path="res://Scenes/PlayPause.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Next.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/res/w-rook.png" type="Texture" id=10]
[ext_resource path="res://Resources/res/w-knight.png" type="Texture" id=11]
[ext_resource path="res://Resources/res/b-knight.png" type="Texture" id=12]
[ext_resource path="res://Resources/res/b-bishop.png" type="Texture" id=13]
[ext_resource path="res://Resources/res/b-rook.png" type="Texture" id=14]
[ext_resource path="res://Resources/res/w-bishop.png" type="Texture" id=15]
[ext_resource path="res://Resources/res/w-queen.png" type="Texture" id=16]
[ext_resource path="res://Resources/res/b-queen.png" type="Texture" id=17]
[ext_resource path="res://Demo.tscn" type="PackedScene" id=18]
[ext_resource path="res://Resources/fonts/ledfont-sharp-Regular.otf" type="DynamicFontData" id=19]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 19 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
record = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 176.588, 273.291 )
texture = ExtResource( 5 )

[node name="Screen" parent="." instance=ExtResource( 1 )]
position = Vector2( 9.76758, 163.157 )

[node name="Time" parent="." instance=ExtResource( 3 )]
position = Vector2( 297.419, 119 )

[node name="Score" parent="." instance=ExtResource( 3 )]
position = Vector2( 140.9, 119 )

[node name="Level" parent="." instance=ExtResource( 4 )]
position = Vector2( 63.7146, 68.1126 )

[node name="Combo" parent="." instance=ExtResource( 4 )]
position = Vector2( 198.076, 67.6922 )

[node name="PlayPause" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 263.051
margin_top = 56.6837
margin_right = 334.051
margin_bottom = 136.684
rect_scale = Vector2( 0.6, 0.6 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextWhiteRook" parent="." instance=ExtResource( 9 )]
position = Vector2( 47, 149 )
texture = ExtResource( 10 )
id = "R"
key = Vector3( 1, 1, 1 )

[node name="NextBlackKnight" parent="." instance=ExtResource( 9 )]
position = Vector2( 80, 149 )
texture = ExtResource( 12 )
id = "n"
key = Vector3( 1, 1, 1 )

[node name="NextWhiteBishop" parent="." instance=ExtResource( 9 )]
position = Vector2( 111, 149 )
texture = ExtResource( 15 )
id = "B"
key = Vector3( 1, 1, 1 )

[node name="NextBlackQueen" parent="." instance=ExtResource( 9 )]
position = Vector2( 144, 149 )
texture = ExtResource( 17 )
id = "q"
key = Vector3( 1, 1, 1 )

[node name="NextWhiteQueen" parent="." instance=ExtResource( 9 )]
position = Vector2( 175, 149 )
texture = ExtResource( 16 )
id = "Q"
key = Vector3( 1, 1, 1 )

[node name="NextBlackBishop" parent="." instance=ExtResource( 9 )]
position = Vector2( 208, 149 )
texture = ExtResource( 13 )
id = "b"
key = Vector3( 1, 1, 1 )

[node name="NextWhiteKnight" parent="." instance=ExtResource( 9 )]
position = Vector2( 239, 149 )
texture = ExtResource( 11 )
id = "N"
key = Vector3( 1, 1, 1 )

[node name="NextBlackRook" parent="." instance=ExtResource( 9 )]
position = Vector2( 272, 149 )
texture = ExtResource( 14 )
id = "r"
key = Vector3( 1, 1, 1 )

[node name="Off" type="Button" parent="."]
margin_left = 8.02292
margin_top = 20.7652
margin_right = 45.0229
margin_bottom = 40.7652
text = "OFF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 264.284
margin_top = 20.2933
margin_right = 312.284
margin_bottom = 40.2933
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Demo" parent="." instance=ExtResource( 18 )]
sequence = PoolStringArray( "res://Demos/test0.demo" )

[node name="Readout1" type="Label" parent="."]
margin_left = 46.1985
margin_top = 2.22363
margin_right = 262.198
margin_bottom = 20.2236
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.34902, 0.34902, 1 )
text = "000000000000000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Readout2" type="Label" parent="."]
margin_left = 46.1985
margin_top = 19.2236
margin_right = 262.198
margin_bottom = 37.2236
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.34902, 0.34902, 1 )
text = "000000000000000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Readout3" type="Label" parent="."]
margin_left = 46.1985
margin_top = 36.2236
margin_right = 262.198
margin_bottom = 54.2236
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.34902, 0.34902, 1 )
text = "000000000000000000"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="game_over" from="Screen" to="." method="_on_Screen_game_over"]
[connection signal="landed" from="Screen" to="." method="_on_Screen_landed"]
[connection signal="resume" from="Screen" to="." method="_on_Screen_resume"]
[connection signal="pause" from="PlayPause" to="." method="_on_PlayPause_pause"]
[connection signal="play" from="PlayPause" to="." method="_on_PlayPause_play"]
[connection signal="toggled" from="PlayPause" to="PlayPause" method="_on_PlayPause_toggled"]
[connection signal="pressed" from="Off" to="." method="_on_Off_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="done" from="Demo" to="." method="_on_Demo_done"]
